# illusion-rs

./: .gitignore  logs.txt  wip.diff
client/: Cargo.toml
client/src/hvapi/: mod.rs
client/src/memory/process/: process_manager.rs
client/src/pemem/: mod.rs
hypervisor/: Cargo.toml
hypervisor/src/: allocator.rs  error.rs  lib.rs  logger.rs  vmm.rs
hypervisor/src/intel/: addresses.rs  bitmap.rs  capture.rs  descriptor.rs  ept.rs  events.rs  mod.rs  mtrr.rs  paging.rs  segmentation.rs  vm.rs  vmcs.rs  vmerror.rs  vmexit_handler.rs  vmlaunch.rs  vmlaunch_diagnostics.rs
hypervisor/src/intel/hooks/: descriptor_manager.rs  hook_manager.rs
hypervisor/src/intel/vmexit/: cpuid.rs  cr.rs  diagnostics.rs  ept_violation.rs  exception.rs  invd.rs  mod.rs  msr.rs  vmcall.rs  xsetbv.rs
hypervisor/src/windows/eprocess/: mod.rs
hypervisor/src/windows/nt/: pe.rs
loader/: Cargo.toml
loader/src/: images.rs  main.rs
uefi/: Cargo.toml
uefi/.cargo/: config.toml
uefi/src/: hide.rs  main.rs  processor.rs  setup.rs  stack.rs  virtualize.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/vmware/: mod.rs
