[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
ntapi = "0.4.1" # https://crates.io/crates/ntapi
log = { version = "0.4.27", default-features = false } # https://crates.io/crates/log
thiserror = "2.0.17" # https://crates.io/crates/thiserror
x86 = "0.52.0" # https://crates.io/crates/x86
obfstr = "0.4.4" # https://crates.io/crates/obfstr
shared = { path = "../shared" }

[dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
