[package]
name = "hypervisor"
version = "0.1.0"
edition = "2024"

[features]
vmware = []
hide_hv_with_ept = []

[lib]
name = "hypervisor"
path = "src/lib.rs"

[dependencies]
# CPU / arch crates
x86 = "0.52.0"                        # latest on crates.io for x86
x86_64 = "0.15.2"                     # latest x86_64 on docs.rs

# error handling (no-std)
thiserror-no-std = "2.0.2"            # no-std error handling

# bit-level helpers
bitfield = "0.19.2"                   # bitfields
bit_field = "0.10.3"
bitflags = "2.9.4"

# layout / alignment helpers
elain = "0.3.1"                       # const-generic alignment crate

# globals
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# string obfuscation
obfstr = "0.4.4"

# compile-time checks
static_assertions = "1.1.0"

# logging – unified with UEFI:
# - no std
# - all levels enabled in debug and release
log = { version = "0.4.28", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }

# byte-string utils (no_std mode)
bstr = { version = "1.12.1", default-features = false }

# derives that work in core
derivative = { version = "2.2.0", features = ["use_core"] }

# sync primitives for no_std
spin = "0.10.0"

# disassembler / decoder helper you already had
lde = "0.3.0"

# numeric helpers
num-traits = { version = "0.2.19", default-features = false }
num-derive = { version = "0.4.2", default-features = false }

# wide strings but still alloc-only so we stay no_std-friendly
widestring = { version = "1.1.0", default-features = false, features = ["alloc"] }

# project-local shared crate
shared = { path = "../shared" }
