[package]
name = "illusion"
version = "0.1.0"
edition = "2024"

[features]
hide_uefi_memory = []

[[bin]]
name = "illusion"
path = "src/main.rs"

[dependencies]
# drop "global_allocator" so we don't collide with the hypervisor's allocator
uefi = { version = "0.36", features = ["panic_handler", "logger", "alloc"] }
log = { version = "0.4.28", default-features = false }
once_cell = "1.21.3"
spin = "0.10.0"
com_logger = "0.1.2"
hypervisor = { path = "../hypervisor", features = ["vmware", "hide_hv_with_ept"] }
