[package]
name = "illusion"
version = "0.1.0"
edition = "2024"

[features]
hide_uefi_memory = []

[[bin]]
name = "illusion"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.36", default-features = false, features = ["panic_handler", "alloc"] }

# Shared logging configuration with hypervisor:
# - no std
# - keep all log levels enabled in both debug and release
log = { version = "0.4.28", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }

once_cell = "1.21.3"
spin = "0.10.0"
com_logger = "0.1.2"

# Hypervisor crate, built with the same log configuration
hypervisor = { path = "../hypervisor", features = ["vmware", "hide_hv_with_ept"] }
